--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div>diogo</div>
     <div class="container">
     <a href="pages/pag-log/index.html" class="login-circle" aria-label="Login"></a>
     <div class="admin">
@@ -43,4 +44,5 @@
         <a href="post/post2/post2.html" class="post2">- Escritório e Agência Portal Lagoinha</a>
     </div>
 </body>
+
 </html>
